// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSelectOptionStyles() should return correct css for theme: dark and additionalOptionJSSStyle: { color: 'black' } 1`] = `
{
  "option": {
    "&--disabled": {
      "color": "#7E7F82",
      "cursor": "not-allowed",
    },
    "&--hidden": {
      "display": "none",
    },
    "&--highlighted": {
      "background": "#404044",
    },
    "&--highlighted, &--selected": {
      "color": "#FBFCFF",
    },
    "&--selected": {
      "background": "#212225",
    },
    "&[role=status]": {
      "cursor": "not-allowed",
    },
    "&__sr": {
      "height": "1px",
      "position": "absolute",
      "textIndent": "-999999px",
      "width": 0,
    },
    "@media(hover:hover)": {
      "&:not([aria-disabled]):not([role=status]):hover": {
        "background": "#404044",
        "color": "#FBFCFF",
      },
    },
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "black",
    "cursor": "pointer",
    "display": "flex",
    "flex": "1 0 calc(calc(6px + 2.125ex) + 8px * 2)",
    "gap": "12px",
    "justifyContent": "space-between",
    "padding": "8px 12px",
    "textAlign": "left",
    "transition": "background-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease",
    "wordBreak": "break-word",
  },
}
`;

exports[`getSelectOptionStyles() should return correct css for theme: dark and additionalOptionJSSStyle: undefined 1`] = `
{
  "option": {
    "&--disabled": {
      "color": "#7E7F82",
      "cursor": "not-allowed",
    },
    "&--hidden": {
      "display": "none",
    },
    "&--highlighted": {
      "background": "#404044",
    },
    "&--highlighted, &--selected": {
      "color": "#FBFCFF",
    },
    "&--selected": {
      "background": "#212225",
    },
    "&[role=status]": {
      "cursor": "not-allowed",
    },
    "&__sr": {
      "height": "1px",
      "position": "absolute",
      "textIndent": "-999999px",
      "width": 0,
    },
    "@media(hover:hover)": {
      "&:not([aria-disabled]):not([role=status]):hover": {
        "background": "#404044",
        "color": "#FBFCFF",
      },
    },
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#AFB0B3",
    "cursor": "pointer",
    "display": "flex",
    "flex": "1 0 calc(calc(6px + 2.125ex) + 8px * 2)",
    "gap": "12px",
    "justifyContent": "space-between",
    "padding": "8px 12px",
    "textAlign": "left",
    "transition": "background-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease",
    "wordBreak": "break-word",
  },
}
`;

exports[`getSelectOptionStyles() should return correct css for theme: light and additionalOptionJSSStyle: { color: 'black' } 1`] = `
{
  "option": {
    "&--disabled": {
      "color": "#949598",
      "cursor": "not-allowed",
    },
    "&--hidden": {
      "display": "none",
    },
    "&--highlighted": {
      "background": "#D8D8DB",
    },
    "&--highlighted, &--selected": {
      "color": "#010205",
    },
    "&--selected": {
      "background": "#EEEFF2",
    },
    "&[role=status]": {
      "cursor": "not-allowed",
    },
    "&__sr": {
      "height": "1px",
      "position": "absolute",
      "textIndent": "-999999px",
      "width": 0,
    },
    "@media(hover:hover)": {
      "&:not([aria-disabled]):not([role=status]):hover": {
        "background": "#D8D8DB",
        "color": "#010205",
      },
    },
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "black",
    "cursor": "pointer",
    "display": "flex",
    "flex": "1 0 calc(calc(6px + 2.125ex) + 8px * 2)",
    "gap": "12px",
    "justifyContent": "space-between",
    "padding": "8px 12px",
    "textAlign": "left",
    "transition": "background-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease",
    "wordBreak": "break-word",
  },
}
`;

exports[`getSelectOptionStyles() should return correct css for theme: light and additionalOptionJSSStyle: undefined 1`] = `
{
  "option": {
    "&--disabled": {
      "color": "#949598",
      "cursor": "not-allowed",
    },
    "&--hidden": {
      "display": "none",
    },
    "&--highlighted": {
      "background": "#D8D8DB",
    },
    "&--highlighted, &--selected": {
      "color": "#010205",
    },
    "&--selected": {
      "background": "#EEEFF2",
    },
    "&[role=status]": {
      "cursor": "not-allowed",
    },
    "&__sr": {
      "height": "1px",
      "position": "absolute",
      "textIndent": "-999999px",
      "width": 0,
    },
    "@media(hover:hover)": {
      "&:not([aria-disabled]):not([role=status]):hover": {
        "background": "#D8D8DB",
        "color": "#010205",
      },
    },
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#535457",
    "cursor": "pointer",
    "display": "flex",
    "flex": "1 0 calc(calc(6px + 2.125ex) + 8px * 2)",
    "gap": "12px",
    "justifyContent": "space-between",
    "padding": "8px 12px",
    "textAlign": "left",
    "transition": "background-color var(--p-transition-duration, .24s) ease,color var(--p-transition-duration, .24s) ease",
    "wordBreak": "break-word",
  },
}
`;
